changed some text in Text tab

--- a/Text.html
+++ b/Text.html
@@ -12,47 +12,33 @@
   <p>Welcome to your Kitchen Companion! Here, you’ll find a collection of essential tips. Scroll down to explore! Remember, 
     a well-organized kitchen makes cooking more fun and less stressful.</p>
   <p>Please note that this font size is too small to read easily on this device for many users...</p>
-
-  <p><strong>Ingredient Storage:</strong> Always check the expiration dates on all ingredients before use. 
-    Store dry goods like flour, sugar, and rice in airtight containers to prevent moisture and pests. 
-    For fresh produce, store leafy greens in a sealed bag with a paper towel to absorb excess moisture, 
-    which helps them stay fresh longer.</p>
-
-  <p><strong>Cooking Temperature Tips:</strong> For meats, always check the internal temperature with a 
+  <p><strong>1.</strong> Peel ginger with a spoon.</p>
+  <p><strong>2.</strong> For meats, always check the internal temperature with a 
     thermometer to ensure safety. Poultry should reach 165°F (74°C), beef steaks and roasts vary depending 
-    on preference, but ground meat should reach 160°F (71°C). Vegetables are often best cooked al dente to 
-    preserve nutrients and texture.</p>
-  
-  <p><strong>Meal Prep Advice:</strong> Plan your meals ahead of time to save both money and time. Wash and 
-    chop vegetables in bulk and store them in airtight containers. Marinate proteins overnight for better flavor. 
-    Use labeled containers to avoid confusion during the week.</p>
-  
-  <p><strong>Pantry Essentials:</strong> Keep your pantry stocked with basics like olive oil, salt, pepper, 
-    garlic, onions, canned tomatoes, beans, and rice. These ingredients form the foundation of countless meals. 
-    Also, keep a variety of spices to add depth and flavor to your dishes without needing complicated sauces.</p>
-  
-  <p><strong>Safety Precautions:</strong> Never leave cooking food unattended. Keep a fire extinguisher nearby, 
-    and know how to use it. Avoid loose clothing while cooking, and tie back long hair. Always turn pot handles 
-    inward to prevent accidental spills, and wipe up any spills immediately to avoid slips.</p>
-  
-  <p><strong>Cleaning Tips:</strong> Clean as you go. Wash cutting boards and knives immediately after use, 
-    especially after handling raw meat. Use separate boards for meats and vegetables to avoid cross-contamination. 
-    Keep countertops wiped and sanitized, and make sure to take out the trash regularly to maintain a hygienic workspace.</p>
-  
-  <p><strong>Baking Tips:</strong> Measure ingredients carefully; baking is a science. Use room-temperature eggs 
-    and dairy for better mixing. Preheat your oven thoroughly, and rotate baking trays halfway through cooking for 
-    even results. Don’t open the oven door too often, or it can affect rising and baking times.</p>
-  
-  <p><strong>Extra Flavor:</strong> Use fresh herbs, lemon juice, or a pinch of zest to brighten dishes. 
-    Toast spices briefly in a dry pan to release aromas. Salt gradually, tasting as you go, to avoid over-seasoning. 
-    Incorporate acidic ingredients like vinegar or citrus at the end of cooking to enhance flavor.</p>
-  
-  <p><strong>Have Fun:</strong> Enjoy the process! Cooking is an art and a science. Play music, 
-    experiment with new ingredients, and taste as you go. Remember that mistakes happen; even burnt toast can be a 
-    learning experience. Stay patient, organized, and curious.</p>
-  
-  <p><strong>Sustainability Tips:</strong> Compost vegetable scraps when possible. Reduce food waste by planning 
-    meals and using leftovers creatively. Reuse containers and glass jars for storage. Buy local ingredients when 
-    available to support community farmers and reduce carbon footprint.</p>
+    on preference, but ground meat should reach 160°F (71°C).</p>
+  <p><strong>3.</strong> Plan your meals ahead of time to save both money and time.</p>
+  <p><strong>4.</strong> Use a sharp knife for better precision and safety. A dull knife requires more force, 
+    increasing the risk of slipping and cutting yourself</p>
+  <p><strong>5.</strong> When baking, always preheat your oven to the correct temperature before placing your dish inside and
+    don’t open the oven door too often or it can affect rising and baking times..</p>
+  <p><strong>6.</strong> To prevent food waste, store leftovers in clear containers and label them with the date.</p>
+  <p><strong>7.</strong> Keep your pantry stocked with basics like olive oil, salt, pepper, 
+    garlic, onions, canned tomatoes, beans, and rice.</p>
+  <p><strong>8.</strong> Never leave cooking food unattended. Keep a fire extinguisher nearby, 
+    and know how to use it.</p>
+  <p><strong>9.</strong> Avoid loose clothing while cooking, and tie back long hair.</p>
+  <p><strong>10.</strong> Clean as you go. Wash cutting boards and knives immediately after use, 
+    especially after handling raw meat.</p>
+  <p><strong>11.</strong> Salt gradually, tasting as you go, to avoid over-seasoning. </p>
+  <p><strong>12.</strong> Use fresh herbs, lemon juice, or a pinch of zest to brighten dishes. 
+    Toast spices briefly in a dry pan to release aromas.</p>
+  <p><strong>13.</strong> Enjoy the process! Play music, experiment with new ingredients, and taste as you go. Remember that mistakes happen; even burnt toast can be a 
+    learning experience.</p>
+  <p><strong>14.</strong> Reduce food waste by planning meals and using leftovers creatively.</p>
+  <p><strong>15.</strong> Freeze items for later use! And as flat as possible.</p>
+  <p><strong>16.</strong> Defrost meat on aluminum trays.</p>
+  <p><strong>17.</strong> Read the recipe first.</p>
+  <p><strong>18.</strong> Use a scale for baking.</p>
+
 </div>
 </html>
