organizing files,starting nav

--- a/nav.html
+++ b/nav.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Kitchen Kompanion App</title>
+</head>
+<body>
+    <div id  = "deviceSetting"> 
+    <footer>
+        <!--TEXT  -->
+        <img src = "text.png">
+        <a href = "text.html">Text</a>
+        <!-- LR -->
+        <a href = ""></a>
+        <!-- COLORS -->
+        <!-- PROFILE -->
+        <!-- CHOICES-->
+        <!-- TODO-->
+    </footer>
+    </div>
+    
+</body>
 
