html shell for nav

--- a/nav.html
+++ b/nav.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Kitchen Kompanion App</title>
 </head>
 <body>
     <div id  = "deviceSetting"> 
@@ -13,11 +12,20 @@
         <img src = "text.png">
         <a href = "text.html">Text</a>
         <!-- LR -->
-        <a href = ""></a>
+        <img src ="LR.png">
+        <a href = "LR.html">LR</a>
         <!-- COLORS -->
+        <img src = "colors.png">
+        <a href = "colors.html">Colors</a>
         <!-- PROFILE -->
+        <img src = "profile.png">
+        <a href ="profile.html">Profile</a>
         <!-- CHOICES-->
+        <img src = "choices.png">
+        <a href = "choices.html">Choices</a>
         <!-- TODO-->
+        <img src = "todo.png">
+        <a href="todo.html">ToDo</a>
     </footer>
     </div>
     
