--- a/LR.html
+++ b/LR.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>LR</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a paragraph of text.</p>
+    <div class = "device">
+        <h1>-Text in Lower Right-</h1>
+        <div class = "content-container">
+            <p class = "lr-text"> Down Here </p>
+        </div>
+    </div>
 </body>
 </html>
