--- a/nav.html
+++ b/nav.html
@@ -4,30 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <title>Navigation</title>
 </head>
 <body>
     <div id  = "deviceSetting"> 
     <footer>
         <!--TEXT  -->
-        <img src = "text.png">
-        <a href = "text.html">Text</a>
+         <a class = "nav" href="text.html">
+            <img src="text.png" alt = "text">
+            <span>Text</span>
+        </a>
         <!-- LR -->
-        <img src ="LR.png">
-        <a href = "LR.html">LR</a>
+         <a  class = "nav" href = "LR.html">
+            <img src = "LR.png" alt = "LR">
+            <span>LR</span>
+        </a>
         <!-- COLORS -->
-        <img src = "colors.png">
-        <a href = "colors.html">Colors</a>
+         <a  class = "nav" href = "colors.html">
+            <img src = "colors.png" alt = "colors">
+            <span>Colors</span>
+        </a>
         <!-- PROFILE -->
-        <img src = "profile.png">
-        <a href ="profile.html">Profile</a>
+         <a class = "nav" href ="profile.html">
+            <img src = "profile.png" alt = "profile">
+            <span>Profile</span>
+         </a>
         <!-- CHOICES-->
-        <img src = "choices.png">
-        <a href = "choices.html">Choices</a>
+         <a class = "nav" href = "choices.html">
+            <img src = "choices.png" alt = "choices">
+            <span>Choices</span>
+        </a>
         <!-- TODO-->
-        <img src = "todo.png">
-        <a href="todo.html">ToDo</a>
+         <a class = "nav" href="todo.html">
+            <img src = "todo.png" alt = "todo">
+            <span>ToDo</span>
+        </a>
     </footer>
     </div>
-    
 </body>
-
+</html>
