--- a/nav.html
+++ b/nav.html
@@ -7,39 +7,37 @@
     <title>Navigation</title>
 </head>
 <body>
-    <div id  = "deviceSetting"> 
     <footer>
         <!--TEXT  -->
          <a class = "nav" href="text.html">
-            <img src="text.png" alt = "text">
+            <img class = "nav-img" src="text.png" alt = "text">
             <span>Text</span>
         </a>
         <!-- LR -->
          <a  class = "nav" href = "LR.html">
-            <img src = "LR.png" alt = "LR">
+            <img class = "nav-img" src = "LR.png" alt = "LR">
             <span>LR</span>
         </a>
         <!-- COLORS -->
          <a  class = "nav" href = "colors.html">
-            <img src = "colors.png" alt = "colors">
+            <img class = "nav-img" src = "colors.png" alt = "colors">
             <span>Colors</span>
         </a>
         <!-- PROFILE -->
          <a class = "nav" href ="profile.html">
-            <img src = "profile.png" alt = "profile">
+            <img class = "nav-img" src = "profile.png" alt = "profile">
             <span>Profile</span>
          </a>
         <!-- CHOICES-->
          <a class = "nav" href = "choices.html">
-            <img src = "choices.png" alt = "choices">
+            <img class = "nav-img" src = "choices.png" alt = "choices">
             <span>Choices</span>
         </a>
         <!-- TODO-->
          <a class = "nav" href="todo.html">
-            <img src = "todo.png" alt = "todo">
+            <img class = "nav-img" src = "todo.png" alt = "todo">
             <span>ToDo</span>
         </a>
     </footer>
-    </div>
 </body>
 </html>
