adding nav to pages

--- a/Profile.html
+++ b/Profile.html
@@ -17,5 +17,37 @@
     <p >Welcome Back Chef!</p>
     <button class="close-btn" id="closeBtn" onclick="document.getElementById('message').style.display='none'">Close</button>
   </div>
+  <footer>
+        <!--TEXT  -->
+         <a class = "nav" href="text.html">
+            <img class = "nav-img" src="text.png" alt = "text">
+            <span>Text</span>
+        </a>
+        <!-- LR -->
+         <a  class = "nav" href = "LR.html">
+            <img class = "nav-img" src = "LR.png" alt = "LR">
+            <span>LR</span>
+        </a>
+        <!-- COLORS -->
+         <a  class = "nav" href = "colors.html">
+            <img class = "nav-img" src = "colors.png" alt = "colors">
+            <span>Colors</span>
+        </a>
+        <!-- PROFILE -->
+         <a class = "nav" id = "nav-curr" href ="profile.html">
+            <img class = "nav-img" src = "profile.png" alt = "profile">
+            <span>Profile</span>
+         </a>
+        <!-- CHOICES-->
+         <a class = "nav" href = "choices.html">
+            <img class = "nav-img" src = "choices.png" alt = "choices">
+            <span>Choices</span>
+        </a>
+        <!-- TODO-->
+         <a class = "nav" href="todo.html">
+            <img class = "nav-img" src = "todo.png" alt = "todo">
+            <span>ToDo</span>
+        </a>
+    </footer>
 </div>
 </html>
