--- a/Text.html
+++ b/Text.html
@@ -39,6 +39,37 @@
   <p><strong>16.</strong> Defrost meat on aluminum trays.</p>
   <p><strong>17.</strong> Read the recipe first.</p>
   <p><strong>18.</strong> Use a scale for baking.</p>
-
+<footer>
+        <!--TEXT  -->
+         <a class = "nav" id = "nav-curr" href="text.html">
+            <img class = "nav-img" src="text.png" alt = "text">
+            <span>Text</span>
+        </a>
+        <!-- LR -->
+         <a  class = "nav" href = "LR.html">
+            <img class = "nav-img" src = "LR.png" alt = "LR">
+            <span>LR</span>
+        </a>
+        <!-- COLORS -->
+         <a  class = "nav" href = "colors.html">
+            <img class = "nav-img" src = "colors.png" alt = "colors">
+            <span>Colors</span>
+        </a>
+        <!-- PROFILE -->
+         <a class = "nav" href ="profile.html">
+            <img class = "nav-img" src = "profile.png" alt = "profile">
+            <span>Profile</span>
+         </a>
+        <!-- CHOICES-->
+         <a class = "nav" href = "choices.html">
+            <img class = "nav-img" src = "choices.png" alt = "choices">
+            <span>Choices</span>
+        </a>
+        <!-- TODO-->
+         <a class = "nav" href="todo.html">
+            <img class = "nav-img" src = "todo.png" alt = "todo">
+            <span>ToDo</span>
+        </a>
+    </footer>
 </div>
 </html>
