--- a/colors.html
+++ b/colors.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <title>Colors</title>
+</head>
+
+<body>
+    <div class = "deviceSetting">
+        <h1>Colors</h1>
+        <p id = "black-bg">Welcome to Kitchen Companion!</p>
+        <p id = "yellow-bg">We are so exicted to help you with all your kitchen needs.</p>
+           <!--Insert Navbar Here-->
+        <footer>
+        <!--TEXT  -->
+         <a class = "nav" href="text.html">
+            <img class = "nav-img" src="text.png" alt = "text">
+            <span>Text</span>
+        </a>
+        <!-- LR -->
+         <a  class = "nav" href = "LR.html">
+            <img class = "nav-img" src = "LR.png" alt = "LR">
+            <span>LR</span>
+        </a>
+        <!-- COLORS -->
+         <a  class = "nav" href = "colors.html">
+            <img class = "nav-img" src = "colors.png" alt = "colors">
+            <span>Colors</span>
+        </a>
+        <!-- PROFILE -->
+         <a class = "nav" href ="profile.html">
+            <img class = "nav-img" src = "profile.png" alt = "profile">
+            <span>Profile</span>
+         </a>
+        <!-- CHOICES-->
+         <a class = "nav" id = "nav-curr" href = "choices.html">
+            <img class = "nav-img" src = "choices.png" alt = "choices">
+            <span>Choices</span>
+        </a>
+        <!-- TODO-->
+         <a class = "nav" href="todo.html">
+            <img class = "nav-img" src = "todo.png" alt = "todo">
+            <span>ToDo</span>
+        </a>
+    </footer>
+    </div>
+</body>
+    
+</html>
