added navigation and final touches to all pages

--- a/colors.html
+++ b/colors.html
@@ -26,7 +26,7 @@
             <span>LR</span>
         </a>
         <!-- COLORS -->
-         <a  class = "nav" href = "colors.html">
+         <a  class = "nav"id = "nav-curr" href = "colors.html">
             <img class = "nav-img" src = "colors.png" alt = "colors">
             <span>Colors</span>
         </a>
@@ -36,7 +36,7 @@
             <span>Profile</span>
          </a>
         <!-- CHOICES-->
-         <a class = "nav" id = "nav-curr" href = "choices.html">
+         <a class = "nav" href = "choices.html">
             <img class = "nav-img" src = "choices.png" alt = "choices">
             <span>Choices</span>
         </a>
